--- a/.github/workflows/CHAPTER 6.yml
+++ b/.github/workflows/CHAPTER 6.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Test LaTeX
         working-directory: ./LaTex
         run: |
-            xelatex cd_6. CHAPTER.tet
-	    xelatex cd_6. CHAPTER.tet
-	    xelatex cd_6. CHAPTER.tet
+            xelatex cd_6. CHAPTER.tex
+	    xelatex cd_6. CHAPTER.tex
+	    xelatex cd_6. CHAPTER.tex
 
       - name: Bump version and push tag
         id: tag_version
