--- a/.github/workflows/CHAPTER 6.yml
+++ b/.github/workflows/CHAPTER 6.yml
@@ -21,10 +21,12 @@ jobs:
         run:
           sudo apt install -y texlive texlive-xetex texlive-lang-chinese gsfonts fonts-moe-standard-kai ttf-mscorefonts-installer librsvg2-bin texlive-fonts-extra 
       - name: Test LaTeX
-        working-directory: ./LaTex
+        working-directory: ./latex
         run: |
-            xelatex cd_6. CHAPTER.tex
-	    
+              CHAPTER6.tex
+              CHAPTER6.tex
+              CHAPTER6.tex
+
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
@@ -49,6 +51,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: ./LaTex/CHAPTER 6.pdf
-          asset_name: CHAPTER 6.pdf
+          asset_path: ./latex/CHAPTER6.pdf
+          asset_name: CHAPTER6.pdf
           asset_content_type: pdf
